McStas-2.5_CPU_MPICC/Test_Pol_Guide_Vmirror/compile_stdout.txt
INFO: No output directory specified (--dir)
INFO: Using directory: "Test_Pol_Guide_Vmirror_20200225_210633"
INFO: Regenerating c-file: Test_Pol_Guide_Vmirror.c
Warning: Using DEFINITION parameter of component Pol_guide_vmirror() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Guide_Vmirror/Test_Pol_Guide_Vmirror.instr:84
  rPar={ GUIDEREF , 1.0 * 0.0219 , 6.07 , 1 , 0.003 }
Warning: Using DEFINITION parameter of component Pol_guide_vmirror() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Guide_Vmirror/Test_Pol_Guide_Vmirror.instr:84
  rUpPar={ MIRRORREF , 2.0 * 0.0219 , 6.07 , 1 , 0.003 }
Warning: Using DEFINITION parameter of component Pol_guide_vmirror() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Guide_Vmirror/Test_Pol_Guide_Vmirror.instr:84
  rDownPar={ MIRRORREF , 0.4 * 0.0219 , 6.07 , 1 , 0.003 }
CFLAGS=
INFO: Recompiling: ./Test_Pol_Guide_Vmirror.out
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../optics/Pol_guide_vmirror.comp:115:19: warning: ISO C99 requires whitespace after the macro name
   if (Table_Read(rUpParPtr, rUpPar, 1) <= 0) {
                   ^
INFO: ===
[n-62-23-14:07795] mca_base_component_repository_open: unable to open mca_plm_lsf: libbat.so: cannot open shared object file: No such file or directory (ignored)
[n-62-23-14:07795] mca_base_component_repository_open: unable to open mca_ras_lsf: libbat.so: cannot open shared object file: No such file or directory (ignored)
[1582661197.902163] [n-62-23-14:7794 :0]         sys.c:744  MXM  WARN  Conflicting CPU frequencies detected, using: 3377.64
[1582661197.903686] [n-62-23-14:7794 :0]      ib_dev.c:533  MXM  WARN  failed call to ibv_exp_use_priv_env(): Function not implemented
[1582661197.903690] [n-62-23-14:7794 :0]      ib_dev.c:544  MXM  ERROR ibv_query_device() returned 38: Function not implemented
--------------------------------------------------------------------------
Initialization of MXM library failed.

  Error: Input/output error

--------------------------------------------------------------------------
[1582661197.906192] [n-62-23-14:7794 :0]      ib_dev.c:533  MXM  WARN  failed call to ibv_exp_use_priv_env(): Function not implemented
[1582661197.906195] [n-62-23-14:7794 :0]      ib_dev.c:544  MXM  ERROR ibv_query_device() returned 38: Function not implemented
begin instrument: Test_Pol_Guide_Vmirror
  Creator: McStas 2.5 - Feb. 24, 2020
  Source: /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Guide_Vmirror/Test_Pol_Guide_Vmirror.instr
  Parameters:  polariserIn(int)
  Trace_enabled: yes
  Default_main: yes
  Embedded_runtime: yes
end instrument
begin simulation: .
  Format: McStas
  URL: http://www.mccode.org
  Creator: McStas 2.5 - Feb. 24, 2020
  Instrument: /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Guide_Vmirror/Test_Pol_Guide_Vmirror.instr
  Ncount: 1000000
  Trace: no
  Gravitation: no
  Seed: 1582668991
  Directory: .
  Param: polariserIn=1
end simulation
info!
